# mysql-via-ssh

./: .gitignore  AUTHORS.md  BRANDING_SETUP.md  CODEMIRROR_FIX_REPORT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELETE_ADMIN_FIX_REPORT.md  EDIT_QUERY_FIX_REPORT.md  GITHUB_SETUP.md  IMPORT_SOLUTION.md  LICENSE  MULTI_TENANT_SSH_PLAN.md  PHASE_1_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  SAVE_QUERY_FIX_REPORT.md  STORY.md  STRUCTURE.md  SUPPORT.md  check_admin_configs.py  check_db_schema.py  config.py  debug_admin_session.py  debug_status_api.py  demo_connection_status.py  example_usage.py  force_init_db.py  force_update_schema.py  main.py  migrate_database.py  mysql_ssh_connection.py  pyproject.toml  recreate_table.py  requirements.txt  reset_admin_password.py  run_example.py  run_flask_ui.py  setup.py  show_admin_data.py  simple_debug.py  (+14 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: support.md
config/: __init__.py  config.py  ssh_encrypt.key
docs/: ADMIN_DASHBOARD.md  BUILD_SETUP.md  FLASK_UI.md  README.md  SECURITY.md
examples/: example_usage.py
flask_ui/: app.py
flask_ui/static/css/: style.css
flask_ui/static/js/: app.js
flask_ui/templates/: admin_dashboard.html  admin_login.html  admin_management.html  admin_register.html  admin_ssh_config_form.html  admin_ssh_configs.html  admin_workspace.html  base.html  dashboard.html  error.html  index.html  query.html
src/: __init__.py
src/database/: __init__.py  admin_db.py  mysql_ssh_connection.py  ssh_encryption.py
tests/: test_mysql_ssh_connection.py
tools/: admin_db_explorer.py
