[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysql-ssh-connection"
version = "1.0.0"
description = "Python package untuk koneksi MySQL melalui SSH tunnel"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Julian Sukrisna", email = "smallest87@gmail.com"}
]
maintainers = [
    {name = "Julian Sukrisna", email = "smallest87@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "pymysql>=1.1.0",
    "sshtunnel>=0.4.0",
    "paramiko>=2.7.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
mysql-ssh = "main:main"

[project.urls]
Homepage = "https://github.com/smallest87/mysql-ssh-connection"
Repository = "https://github.com/smallest87/mysql-ssh-connection.git"
Documentation = "https://github.com/smallest87/mysql-ssh-connection#readme"
Issues = "https://github.com/smallest87/mysql-ssh-connection/issues"
Funding = "https://github.com/smallest87/mysql-ssh-connection/blob/main/SUPPORT.md"
Sponsor = "https://github.com/sponsors/smallest87"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
